--- a/allUsers.html
+++ b/allUsers.html
@@ -9,36 +9,38 @@
     <title>Document</title>
 </head>
 
-<body>
-    <div id="tableWrapper">
-        <table class="table table-dark" id="mainTable">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Gender</th>
-                    <th>DOB</th>
-                    <th>Height</th>
-                    <th>Weight</th>
-                    <th>Eye Color</th>
-                    <th>Occupation</th>
-                    <th>Parents</th>
-                    <th>Spouse</th>
-                </tr>
-            </thead>
-            <tbody id="data">
+<body class="bg-primary">
+    <div class="container">
+        <h1><u>Most Wanted Users</u></h1>
+        <div id="tableWrapper">
+            <table class="table table-striped table-dark table-sm" id="mainTable">
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Gender</th>
+                        <th>DOB</th>
+                        <th>Height</th>
+                        <th>Weight</th>
+                        <th>Eye Color</th>
+                        <th>Occupation</th>
+                        <th>Parents</th>
+                        <th>Spouse</th>
+                    </tr>
+                </thead>
+                <tbody id="data">
 
-            </tbody>
+                </tbody>
 
-        </table>
-        <script src="data.js"></script>
-        <script src="app.js"></script>
+            </table>
+            <script src="data.js"></script>
+            <script src="app.js"></script>
+        </div>
+
+
+        <h2><u><a class="bg-success text-dark" href="index.html">Return to Search</a></u></h2>
     </div>
-
-
-
-
 
 
 </body>
