--- a/newForm.html
+++ b/newForm.html
@@ -12,7 +12,7 @@
 <body class="bg-primary">
     <div>
         <div class="container ">
-            <h1>Search By:</h1>
+            <h1>Search By Two or More Criteria:</h1>
             <div class="form">
                 <form id="nameForm" onsubmit="return results();">
                     <label for="fname">First name:</label><br>
@@ -37,8 +37,7 @@
                     <input type="text" id="currentSpouse" name="currentSpouse"><br><br>
 
 
-                    <input type="button" class="btn btn-danger" onclick="masterSearch(),displayTable()"
-                        value="Submit"><br><br>
+                    <input type="button" class="btn btn-danger" onclick="displayTable()" value="Submit"><br><br>
                 </form>
             </div>
 
