--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </form>
       </div>
 
-      <table class="table1 table-striped table-dark table-sm" id="mainTable">
+      <table class="table1 table-striped table-dark table-sm mb-5" id="mainTable">
         <thead>
           <tr>
             <th>Id</th>
@@ -55,6 +55,8 @@
             <th>Occupation</th>
             <th>Parents</th>
             <th>Spouse</th>
+            <th>Decendants</th>
+            <th>Immediate Family</th>
           </tr>
         </thead>
         <tbody id="data"></tbody>
